ipotesi render messaggi utente

--- a/index.html
+++ b/index.html
@@ -80,8 +80,11 @@
                         <div class="my_inline">Michele</div>
                     </div>
 
-                    <!--<p>{{contacts[selectedContact].messages}}</p>
+                    <!--Prima idea-->
+                    <p>{{contacts[selectedContact].messages}}</p>
 
+
+                    <!--seconda idea-->
                     <div v-for="(contatto, index) in contacts">
                         
                         <div v-for="(valore2, chiave2, index2) in contatto">
@@ -98,7 +101,7 @@
                             </div>
                         </div>
                         
-                    </div>-->
+                    </div>
 
                     <div class="my_contact_height chat_input_bg text-center my_input_padding">
                         <i class="far fa-smile my_grey"></i><input type="text" placeholder="Scrivi messaggio" class="my_input_size mx-5"><i class="fas fa-microphone my_grey"></i>
